--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "test/integration"]
 	path = test/integration
 	url = https://github.com/gitboyzorro5/integration.git
+[submodule "test/toolbox"]
+	path = test/toolbox
+	url = https://github.com/gitboyzorro5/toolbox.git
